# brats_training

./: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml  train.py
scripts/: predict_case.py
